# HideIR

./: .dockerignore  API.md  CMakeLists.txt  Dockerfile  README.md  build.sh  diagnose.sh  docker-compose.yml  hideir.sh  obfuscate.sh  test_compile.sh  test_hello.sh  test_obfuscator.c
api/: go.mod  main.go
examples/: main.c  my_config.yaml
orchestrator/: go.mod
orchestrator/cmd/: compiler_wrapper.go
orchestrator/config/: default_config.yaml
orchestrator/interceptor/: interceptor.go  interceptor_test.go
orchestrator/logger/: logger.go
src/: CMakeLists.txt
src/APIHiding/: APIHiding.cpp  APIHiding.h  CMakeLists.txt
src/AntiDebugging/: AntiDebugging.cpp  AntiDebugging.h  CMakeLists.txt
src/AntiTampering/: AntiTampering.cpp  AntiTampering.h  CMakeLists.txt
src/Flattening/: CMakeLists.txt  Flattening.cpp  Flattening.h
src/FunctionOutlining/: CMakeLists.txt  FunctionOutlining.cpp  FunctionOutlining.h
src/OpaquePredicate/: CMakeLists.txt  OpaquePredicate.cpp  OpaquePredicate.h
src/SplitBasicBlock/: CMakeLists.txt  SplitBasicBlock.cpp  SplitBasicBlock.h
src/StringEncryption/: CMakeLists.txt  StringEncryption.cpp  StringEncryption.h
src/Utils/: CMakeLists.txt  Crypto.cpp  Crypto.h  Random.cpp  Random.h
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/APIHiding/: dlsym_replacement.ll
tests/AntiDebugging/: ptrace_trap.ll  timing_check.ll
tests/AntiTampering/: integrity_check.ll
tests/Flattening/: indirect_branch.ll  nested_control_flow.ll
tests/FunctionOutlining/: outlining_test.ll  skip_obf_functions.ll
tests/OpaquePredicate/: basic_math.ll  skip_obf_functions.ll
tests/SplitBasicBlock/: large_block.ll  threshold_test.ll
tests/StringEncryption/: multiple_strings.ll  plaintext_removal.ll
